crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__tool_done_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> read the manifest                                                             "
"                                                                                "
"⏺ Read(crates/bingo-surface-tui/src/lib.rs)                                     "
"  ⎿  line 1                                                                     "
"     line 2                                                                     "
"     line 3                                                                     "
"     line 4                                                                     "
"     line 5                                                                     "
"     … +4 lines (ctrl+o to expand)                                              "
"  ⎿  allowed for this session                                                   "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
