crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__tools_running_together_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> check the formatting and the tests                                            "
"                                                                                "
"⏺ Bash(cargo fmt --all -- --check)                                              "
"                                                                                "
"⏺ Bash(cargo test --workspace)                                                  "
"                                                                                "
"✻ Rummaging… (esc to interrupt · 1s)                                            "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
